pkg/pocket/src/snapshots/pocket__modify__test__add_url_request.snap
---
source: pkg/pocket/src/modify.rs
expression: "AddUrlRequest::new(url)"
---
{
  "action": "add",
  "url": "https://example.com/"
}
