pkg/pocket/src/snapshots/pocket__modify__test__archive_item.snap
---
source: pkg/pocket/src/modify.rs
expression: "ModifyItem::archive(123456789)"
---
{
  "action": "archive",
  "item_id": 123456789
}
