pkg/pocket/src/snapshots/pocket__modify__test__delete_item.snap
---
source: pkg/pocket/src/modify.rs
expression: "ModifyItem::delete(123456789)"
---
{
  "action": "delete",
  "item_id": 123456789
}
