pkg/pocket/src/snapshots/pocket__modify__test__favorite_item.snap
---
source: pkg/pocket/src/modify.rs
expression: "ModifyItem::favorite(123456789)"
---
{
  "action": "favorite",
  "item_id": 123456789
}
