pkg/pocket/src/snapshots/pocket__modify__test__readd_item.snap
---
source: pkg/pocket/src/modify.rs
expression: "ModifyItem::readd(123456789)"
---
{
  "action": "readd",
  "item_id": 123456789
}
