pkg/pocket/src/snapshots/pocket__modify__test__tag_delete.snap
---
source: pkg/pocket/src/modify.rs
expression: "TagDelete::new(\"tag\".to_string())"
---
{
  "action": "tags_delete",
  "tag": "tag"
}
