pkg/pocket/src/snapshots/pocket__modify__test__tag_rename.snap
---
source: pkg/pocket/src/modify.rs
expression: "TagRename::new(\"old_tag\".to_string(), \"new_tag\".to_string())"
---
{
  "action": "tags_rename",
  "old_tag": "old_tag",
  "new_tag": "new_tag"
}
