pkg/pocket/src/snapshots/pocket__modify__test__unfavorite_item.snap
---
source: pkg/pocket/src/modify.rs
expression: "ModifyItem::unfavorite(123456789)"
---
{
  "action": "unfavorite",
  "item_id": 123456789
}
